timer js logic and style numbers

--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
 
     <div class="timer">
       <div class="timer-item" id="days">
+        <p id="day-num" class="num-text"></p>
         <p class="timer-text">Days</p>
       </div>
       <div class="timer-item" id="hours">
+        <p id="hour-num" class="num-text"></p>
         <p class="timer-text">Hours</p>
       </div>
       <div class="timer-item" id="minutes">
+        <p id="min-num" class="num-text"></p>
         <p class="timer-text">Minutes</p>
       </div>
       <div class="timer-item" id="seconds">
+        <p id="sec-num" class="num-text"></p>
         <p class="timer-text">Seconds</p>
       </div>
     </div>
