--- a/index.html
+++ b/index.html
@@ -34,19 +34,27 @@
 
     <div class="timer">
       <div class="timer-item" id="days">
-        <p id="day-num" class="num-text"></p>
+        <div class="num">
+          <p id="day-num" class="num-text"></p>
+        </div>
         <p class="timer-text">Days</p>
       </div>
       <div class="timer-item" id="hours">
-        <p id="hour-num" class="num-text"></p>
+        <div class="num">
+          <p id="hour-num" class="num-text"></p>
+        </div>
         <p class="timer-text">Hours</p>
       </div>
       <div class="timer-item" id="minutes">
-        <p id="min-num" class="num-text"></p>
+        <div class="num">
+          <p id="min-num" class="num-text"></p>
+        </div>
         <p class="timer-text">Minutes</p>
       </div>
       <div class="timer-item" id="seconds">
-        <p id="sec-num" class="num-text"></p>
+        <div class="num">
+          <p id="sec-num" class="num-text"></p>
+        </div>
         <p class="timer-text">Seconds</p>
       </div>
     </div>
